# minecraft-ping-plasmoid

./: CMakeLists.txt  Messages.sh  README.md
minecraftserverpingplugin/: CMakeLists.txt  formatcodeconverter.cpp  formatcodeconverter.h  minecraftserver.cpp  minecraftserver.h  minecraftserverping.cpp  minecraftserverping.h  qmldir  serverlistmodel.cpp  serverlistmodel.h
package/: metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/images/: no-icon.svgz
package/contents/ui/: MinecraftServerFullDelegate.qml  MinecraftServerIconDelegate.qml  Motd.qml  configServer.qml  main.qml
src/: CMakeLists.txt  minecraftserverping.cpp  minecraftserverping.h
src/package/: metadata.desktop
